--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -45,7 +45,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:labelFor="@+id/regID"
-        android:text="ID"
+        android:text="Username"
         app:layout_constraintBottom_toBottomOf="@+id/regID"
         app:layout_constraintEnd_toStartOf="@+id/regID"
         app:layout_constraintHorizontal_bias="0.647"
@@ -115,7 +115,7 @@
         android:layout_marginEnd="12dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Account Type"
+        android:text="User Type"
         app:layout_constraintBottom_toBottomOf="@+id/AccountSpinner"
         app:layout_constraintEnd_toStartOf="@+id/AccountSpinner"
         app:layout_constraintHorizontal_bias="1.0"
@@ -160,13 +160,14 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="113dp"
+        android:layout_width="145dp"
         android:layout_height="43dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="68dp"
         android:text="REGISTER"
+        android:textAlignment="center"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -193,9 +194,11 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="Email"
+        app:layout_constraintBottom_toBottomOf="@+id/emailInput"
         app:layout_constraintEnd_toStartOf="@+id/emailInput"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="393dp" />
+        app:layout_constraintTop_toTopOf="@+id/emailInput" />
 
 </android.support.constraint.ConstraintLayout>
