--- a/app/src/main/res/layout/activity_user_view.xml
+++ b/app/src/main/res/layout/activity_user_view.xml
@@ -9,14 +9,15 @@
 
     <TextView
         android:id="@+id/UserInfoBox"
-        android:layout_width="355dp"
-        android:layout_height="319dp"
+        android:layout_width="333dp"
+        android:layout_height="302dp"
+        android:layout_marginTop="32dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.517"
+        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="HardcodedText"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="HardcodedText" />
 
     <Button
         android:id="@+id/leaveShelterButton"
