--- a/app/src/main/res/layout/content_shelter_detail_view.xml
+++ b/app/src/main/res/layout/content_shelter_detail_view.xml
@@ -11,7 +11,7 @@
     <TextView
         android:id="@+id/ShelterInfoBox"
         android:layout_width="334dp"
-        android:layout_height="361dp"
+        android:layout_height="284dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -21,5 +21,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
         tools:ignore="HardcodedText" />
 </android.support.constraint.ConstraintLayout>
