--- a/app/src/main/res/layout/activity_shelter_detail_view.xml
+++ b/app/src/main/res/layout/activity_shelter_detail_view.xml
@@ -68,7 +68,7 @@
         android:layout_height="49dp"
         android:layout_marginBottom="28dp"
         android:ems="10"
-        android:hint="hello"
+        android:hint="0"
         android:inputType="number"
         android:text="0"
         android:textAlignment="center"
